sema/testdata/pass/function_decl_call.c
int add(int a, int b);
int main(void) {
    int sum = add(1, 2);
    return sum;
}
