sema/testdata/fail/undeclared.c
int main(void) {
    return undeclared_var;
}
